Fix wrong height

--- a/src/app/features/products-list/containers/products-list/products-list.component.less
+++ b/src/app/features/products-list/containers/products-list/products-list.component.less
@@ -4,5 +4,5 @@
   flex-wrap: wrap;
   overflow-y: auto;
   justify-content: space-evenly;
-  height: calc(100vh - 13rem);
+  height: calc(100vh - 12rem);
 }
